--- a/lesson5/HW1/style.css
+++ b/lesson5/HW1/style.css
@@ -2,7 +2,7 @@ a[target="_blank"] {
     color: green;
 }
 
-li {
+ul, ol {
     background-color: yellow;
 }
 
@@ -22,6 +22,6 @@ li.new {
     background-color: red;
 }
 
-.new.posted-today {
+.new.posted-today{
     background-color: pink;
 }
