--- a/lesson6/task2/style.css
+++ b/lesson6/task2/style.css
@@ -12,10 +12,10 @@ ol span {
     background-color: green;
 }
 
-#Antarctida {
+#special +li > span {
     border: 3px solid red;
 }
 
-.continent {
+#special ~ li {
     margin-left: 16px;
 }
