--- a/lesson7/task1/style.css
+++ b/lesson7/task1/style.css
@@ -20,7 +20,7 @@ button:disabled {
     border: 2px dashed grey;
 }
 
-button:enabled {
+button:enabled:hover {
     background-color: grey;
     color: white;
 }
