--- a/lesson8/task2/style.css
+++ b/lesson8/task2/style.css
@@ -5,4 +5,7 @@
     background-color: bisque;
     margin: 50px 100px;
     padding: 20px;
+    border-width: 10px 20px;
+    border-style: solid solid dashed dashed;
+    border-color: firebrick chartreuse burlywood aqua;
 }
