--- a/lesson9/task2/style.css
+++ b/lesson9/task2/style.css
@@ -1,5 +1,3 @@
-/* Разместите два элемента с классом .container по горизонтали и дайте каждому по 50% ширины экрана. Не забывайте про свойство box-sizing, которое влияет на рассчет ширины элемента. */
-
 * {
     box-sizing: border-box;
 }
@@ -20,5 +18,5 @@
 }
 
 .footer {
-    
+    clear: both;
 }
