--- a/lesson9/HW2/style.css
+++ b/lesson9/HW2/style.css
@@ -1,4 +1,11 @@
+/* https://s3.eu-central-1.amazonaws.com/gromcode-students-layouts/59176/test-config/backstop_data/html_report/index.html */
+
+li {
+    list-style-type: none;
+}
+
 .header {
+    z-index: 1;
     height: 40px;
     background-color: darkturquoise;
     position: absolute;
@@ -64,8 +71,4 @@
     position: absolute;
     top: 80px;
     right: 40px;
-}
-
-li {
-    list-style-type: none;
 }
