--- a/lesson9/HW2/style.css
+++ b/lesson9/HW2/style.css
@@ -1,28 +1,37 @@
-/* https://s3.eu-central-1.amazonaws.com/gromcode-students-layouts/59176/test-config/backstop_data/html_report/index.html */
+* {
+    box-sizing: border-box;
+}
 
 li {
     list-style-type: none;
-}
-
-.header {
-    z-index: 1;
-    height: 40px;
-    background-color: darkturquoise;
-    position: absolute;
-    width: 100%;
-}
-
-.header li {
-    float: left;
-    margin-left: 16px;
-    margin-top: -5px;
     color: white;
 }
 
-.content {
-    height: 5000px;
-    background-color: beige;
+.header {
+    background-color: darkturquoise;
+    height: 40px;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
 }
+
+.nav-list {
+    height: 100%;
+    margin: 0;
+}
+
+.nav-item {
+    height: 100%;
+    margin-left: 16px;
+    padding-top: 10px;
+    display: inline-block;
+}
+
+.content {
+    background-color: beige;
+    height: 5000px;
+}
+
 
 .head {
     width: 200px;
