--- a/lesson10/task2/style.css
+++ b/lesson10/task2/style.css
@@ -70,3 +70,12 @@ ul li {
 .sidebar ul {
     margin: 0;
 }
+
+.ull {
+    display: flex;
+    flex-direction: column;
+}
+
+.ull1 {
+    padding-top: 10px;
+}
