--- a/lesson11/task2/style.css
+++ b/lesson11/task2/style.css
@@ -14,13 +14,15 @@
 }
 
 .cropped {
-    overflow: hidden;
+    cursor: all-scroll;
 }
 
 .both-scrolls {
     overflow: scroll scroll;
+    cursor: all-scroll;
 }
 
 .vertical-scroll {
     overflow-y: scroll;
+    cursor: all-scroll;
 }
