--- a/lesson11/task3/style.css
+++ b/lesson11/task3/style.css
@@ -20,7 +20,6 @@ li {
 }
 
 .menu-list {
-    background-color: lightcyan;
     display: none;
     z-index: 1;
     min-width: 120px;
@@ -45,5 +44,5 @@ li {
 
 .dropdown:hover .menu-list{
     display: block;
-    background-color:ghostwhite;
+    background-color: lightcyan
 }
