--- a/lesson12/style.css
+++ b/lesson12/style.css
@@ -7,7 +7,6 @@ section {
 .technologies {
     letter-spacing: 3px;
     font-size: 24px;
-    /* font-weight: 900; */
     text-decoration: underline;
     opacity: 80%;
 }
@@ -16,6 +15,7 @@ h1 {
     word-spacing: 20px;
     text-transform: uppercase;
     text-align: center;
+    font-weight: 900;
 }
 
 p {
