--- a/lesson12/task2/style.css
+++ b/lesson12/task2/style.css
@@ -1,15 +1,20 @@
 * {
+    box-sizing: border-box;
     font-family: "Verdana";
+}
+
+.header {
+    margin: 16px 0;
 }
 
 h1 {
     font-size: 74px;
     text-align: center;
-    width: 50%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    margin: 16px auto;
+    width: 50%;
+    margin: 0px auto;
 }
 
 div {
