--- a/lesson13/task1/style.css
+++ b/lesson13/task1/style.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 .mountains {
     padding: 32px;
     text-align: center;
@@ -9,7 +5,7 @@
     color: white;
     width: 300px;
     height: 500px;
-    background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+13/task1/nature.jpeg);
+    background-image: url(./img/nature.jpeg);
     background-position: center;
     background-size: cover;
     font-weight: 700;
