--- a/lesson13/task1/style.css
+++ b/lesson13/task1/style.css
@@ -1,10 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
 .mountains {
     padding: 32px;
     text-align: center;
     font-size: 32px;
     color: white;
     width: 300px;
-    height: 500px;
+    height: 532px;
     background-image: url(./img/nature.jpeg);
     background-position: center;
     background-size: cover;
