--- a/lesson13/task1/style.css
+++ b/lesson13/task1/style.css
@@ -9,7 +9,7 @@
     color: white;
     width: 300px;
     height: 532px;
-    background-image: url(./img/nature.jpeg);
+    background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+13/task1/nature.jpeg);
     background-position: center;
     background-size: cover;
     font-weight: 700;
