--- a/lesson13/task3/style.css
+++ b/lesson13/task3/style.css
@@ -10,4 +10,6 @@ h1 {
     font-size: 96px;
     font-weight: 700;
     background-image: linear-gradient(45deg, red, yellow);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
