--- a/lesson15/task1/style.css
+++ b/lesson15/task1/style.css
@@ -15,7 +15,7 @@
 
 .card {
     margin: 16px;
-    box-shadow: 0px 5px 30px -9px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 7px 18px -8px rgba(0,0,0,0.75);
 }
 
 .caption {
