--- a/lesson15/task2/style.css
+++ b/lesson15/task2/style.css
@@ -1,5 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
 .video_example {
     width: 500px;
     display: block;
     margin: 200px auto auto auto;
+    height: auto;
 }
