--- a/lesson15/task2/style.css
+++ b/lesson15/task2/style.css
@@ -5,6 +5,6 @@
 .video_example {
     width: 500px;
     display: block;
-    margin: 200px auto auto auto;
+    margin: 200px auto;
     height: auto;
 }
