--- a/lesson16/HW1/style.css
+++ b/lesson16/HW1/style.css
@@ -37,6 +37,7 @@ h1 {
 }
 
 .form-label {
+    display: block;
     margin-bottom: 4px;
 }
 
@@ -48,6 +49,7 @@ h1 {
     text-transform: uppercase;
     color: white;
     border-radius: 4px;
+    margin-top: 16px;
 }
 
 .form-control input:invalid {
