--- a/lesson16/HW1/style.css
+++ b/lesson16/HW1/style.css
@@ -5,8 +5,8 @@
 .page {
     background-color: bisque;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 10vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,6 +19,7 @@
     width: 300px;
     padding: 16px;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    margin: auto;
 }
 
 h1 {
