--- a/lesson16/HW1/style.css
+++ b/lesson16/HW1/style.css
@@ -5,8 +5,9 @@
 .page {
     background-color: bisque;
     position: absolute;
-    height: 100vh;
-    width: 10vh;
+    margin: 0;
+    height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
