--- a/lesson16/HW1/style.css
+++ b/lesson16/HW1/style.css
@@ -6,8 +6,8 @@
     background-color: bisque;
     position: absolute;
     margin: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,13 +23,12 @@
     margin: auto;
 }
 
-h1 {
+.form-title {
     text-transform: uppercase;
     text-align: center;
 }
 
 .form-input {
-    margin-bottom: 8px;
     height: 32px;
     width: 100%;
     border-radius: 4px;
@@ -47,11 +46,14 @@ h1 {
     width: 100%;
     height: 32px;
     background-color: #ff7f50;
-    margin-bottom: 16px;
+    margin-top: 16px;
     text-transform: uppercase;
     color: white;
     border-radius: 4px;
-    margin-top: 16px;
+}
+
+.form-control {
+    margin-bottom: 8px;
 }
 
 .form-control input:invalid {
