--- a/lesson16/HW1/style.css
+++ b/lesson16/HW1/style.css
@@ -3,24 +3,21 @@
 }
 
 .page {
-    background-color: bisque;
-    position: absolute;
-    margin: 0;
     height: 100vh;
     width: 100vw;
     display: flex;
-    align-items: center;
     justify-content: center;
-    font-family: monospace;
+    align-items: center;
 }
 
 .login-form {
     background-color: aqua;
-    font-size: 16px;
     width: 300px;
     padding: 16px;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
     margin: auto;
+    font-size: 16px;
+    font-family: monospace;
 }
 
 .form-title {
@@ -29,10 +26,10 @@
 }
 
 .form-input {
-    height: 32px;
+    border: 1px solid #808080;
     width: 100%;
+    height: 32px;
     border-radius: 4px;
-    border: 1px #808080;
     outline: none;
     padding: 4px;
 }
@@ -42,13 +39,13 @@
     margin-bottom: 4px;
 }
 
-.submit-button{
+.submit-button {
+    background-color: #ff7f50;
     width: 100%;
     height: 32px;
-    background-color: #ff7f50;
     margin-top: 16px;
     text-transform: uppercase;
-    color: white;
+    color: #fff;
     border-radius: 4px;
 }
 
