--- a/lesson17/task1/style.css
+++ b/lesson17/task1/style.css
@@ -5,6 +5,8 @@
 table {
     margin: 16px;
     width: 500px;
+    line-height: 40px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 table, td, th {
@@ -15,4 +17,34 @@ table, td, th {
 td, th {
     padding: 4px;
     text-align: right;
+}
+
+div {
+    overflow-x: auto;
+}
+
+tbody {
+
+}
+
+th {
+    background-color: aqua;
+}
+
+tfoot {
+    font-weight: 700;
+}
+
+caption {
+    margin-bottom: 8px;
+    color: aqua;
+}
+
+tbody > tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
+tbody > tr:hover {
+    background-color: #aaa;
+    color: white;
 }
