--- a/lesson17/task1/style.css
+++ b/lesson17/task1/style.css
@@ -5,7 +5,6 @@
 table {
     margin: 16px;
     width: 500px;
-    line-height: 40px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -23,12 +22,12 @@ div {
     overflow-x: auto;
 }
 
-tbody {
-
-}
-
 th {
     background-color: aqua;
+}
+
+tr {
+    height: 40px;
 }
 
 tfoot {
@@ -37,7 +36,6 @@ tfoot {
 
 caption {
     margin-bottom: 8px;
-    color: aqua;
 }
 
 tbody > tr:nth-child(odd) {
@@ -47,4 +45,8 @@ tbody > tr:nth-child(odd) {
 tbody > tr:hover {
     background-color: #aaa;
     color: white;
+}
+
+thead {
+    background-color: aqua;
 }
