--- a/lesson17/task2/style.css
+++ b/lesson17/task2/style.css
@@ -3,16 +3,45 @@
 }
 
 table {
-    margin: 16px;
     width: 500px;
+    margin: 16px;
 }
 
-table, td, th {
+table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
 
-td, th {
+th, td {
     padding: 4px;
     text-align: right;
+}
+
+div {
+    overflow-x: auto;
+}
+
+tr {
+    height: 40px;
+}
+
+tfoot {
+    font-weight: 700;
+}
+
+caption {
+    margin-bottom: 8px;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
+tbody tr:hover {
+    background-color: #aaa;
+    color: white;
+}
+
+thead {
+    background-color: aqua;
 }
