--- a/lesson18/HW1/style.css
+++ b/lesson18/HW1/style.css
@@ -1,6 +1,7 @@
 .main {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
 .fa-battery-full {
