--- a/lesson19/HW1/style.css
+++ b/lesson19/HW1/style.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 .container {
     display: flex;
     align-items: center;
@@ -9,7 +5,7 @@
     height: 100vh;
 }
 
-.spinner {
+.spinner-text {
     font-family: monospace;
     text-transform: uppercase;
     font-size: 16px;
@@ -24,10 +20,7 @@
     width: 10px;
     height: 4px;
     border-radius: 2px;
-    animation: move 2s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    transition-timing-function: linear;
+    animation: move 2s alternate infinite, blinking;
 }
 
 @keyframes move {
