--- a/lesson19/HW1/style.css
+++ b/lesson19/HW1/style.css
@@ -5,13 +5,16 @@
     height: 100vh;
 }
 
+.spinner {
+    animation: blinking 2s;
+    animation-iteration-count: infinite;
+    transition-timing-function: linear;
+}
+
 .spinner-text {
     font-family: monospace;
     text-transform: uppercase;
     font-size: 16px;
-    animation: blinking 2s;
-    animation-iteration-count: infinite;
-    transition-timing-function: linear;
 }
 
 .rect {
@@ -20,14 +23,5 @@
     width: 10px;
     height: 4px;
     border-radius: 2px;
-    animation: move 2s alternate infinite;
-}
-
-@keyframes move {
-    from {
-        left: 0;
-    }
-    to {
-        left: 78px;
-    }
+    animation: moving 2s alternate infinite;
 }
