--- a/lesson19/HW2/style.css
+++ b/lesson19/HW2/style.css
@@ -2,28 +2,21 @@
     box-sizing: border-box;
 }
 
-body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .block {
-    position: absolute;
+    position: relative;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: 700;
     color: white;
     text-transform: uppercase;
-    text-align: center;
     width: 200px;
     height: 100px;
     border-radius: 10px;
     background-color: coral;
-    line-height: 100px;
-    animation: move 2s;
-    animation-fill-mode: backwards;
+    animation: move 2s ease forwards;
+    align-items: center;
+    margin: auto;
+    display: flex;
 }
 
 @keyframes move {
