--- a/lesson21/HW1/style.css
+++ b/lesson21/HW1/style.css
@@ -69,6 +69,9 @@ html {
 }
 
 .nav-list-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     left: 0;
     width: 100%;
     background-color: #808080;
@@ -76,10 +79,10 @@ html {
     line-height: 2em;
     margin-bottom: 0.5em;
     list-style-type: none;
-
 }
 
 .nav-list-link {
+    white-space: nowrap;
     display: inline-block;
     width: 100%;
     padding-left: 0.5em;
