--- a/lesson21/HW1/style.css
+++ b/lesson21/HW1/style.css
@@ -5,6 +5,7 @@
 body {
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 html {
@@ -23,13 +24,14 @@ html {
 
 .main {
     display: flex;
-    height: 100vh;
 }
 
 .footer {
+    width: 100%;
     text-align: center;
     background-color: #e5e5e5;
     padding: 0.5em;
+    margin-top: auto;
 }
 
 .navigation {
