--- a/lesson22/task2/style.css
+++ b/lesson22/task2/style.css
@@ -12,6 +12,8 @@ span {
     padding: 8px;
     background-color: #faebd7;
     border-radius: 4px;
+    margin: 0 auto;
+    display: inline-block;
 }
 
 div {
@@ -19,21 +21,20 @@ div {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
 }
 
 .navigation {
     background-color: #ff7f50;
-    flex-grow: 1;
+    
 }
 
 .product-list {
     background-color: #006400;
-    flex-grow: 1;
 }
 
 .news {
     background-color: #0ff;
-    flex-grow: 1;
 }
 
 @media screen and (min-width: 600px) {
@@ -49,7 +50,6 @@ div {
     }
 }
 
-/* 
-При ширине экрана от 600px до 899px - новости должны располагаться под остальными двумя блоками и занимать всю ширину. Навигация и список продуктов делят экран пополам
-При ширине экрана 900px и больше - все три секции должны располагаться в одну линию горизонтально и занимать по 1/3 ширины экрана 
-*/
+.products{
+    overflow: hidden;
+}
