--- a/lesson22/HW1/style.css
+++ b/lesson22/HW1/style.css
@@ -22,6 +22,7 @@ html {
 
 .header-button {
     padding: 0;
+    margin: 0;
     border: none;
     background: transparent;
     outline: none;
@@ -31,6 +32,7 @@ html {
 .nav-list {
     padding: 0;
     list-style-type: none;
+    margin-top: 25px;
 }
 
 .navigation {
