--- a/lesson22/HW1/style.css
+++ b/lesson22/HW1/style.css
@@ -42,13 +42,13 @@ html {
 .nav-list-item {
     background-color: #808080;
     line-height: 2em;
-    margin-bottom: 0.5em;
+    margin: 0.5em;
 }
 
 .nav-list-link {
     display: block;
     color: white;
-    padding-left: 0.5em;
+    padding: 0 0.5em;
     text-decoration: none;
     overflow: hidden;
     text-overflow: ellipsis;
