--- a/lesson22/HW1/style.css
+++ b/lesson22/HW1/style.css
@@ -33,9 +33,6 @@ html {
     padding: 0;
     list-style-type: none;
     margin-top: 24px;
-}
-
-.navigation {
     width: 20%;
 }
 
@@ -43,6 +40,7 @@ html {
     background-color: #808080;
     line-height: 2em;
     margin: 0.5em;
+    white-space: nowrap;
 }
 
 .nav-list-link {
