--- a/les23/task2/style.css
+++ b/les23/task2/style.css
@@ -12,17 +12,28 @@ body {
 .square {
   width: 100px;
   height: 100px;
+  margin: 16px;
   background-color: #ff7f50;
-  margin: 8px;
 }
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 899px) {
   .square {
     background-color: #8a2be2;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .square {
+    background-color: #a61;
   }
 }
 @media screen and (min-width: 1200px) {
   .square {
     background-color: #c47;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  .container {
+    display: flex;
   }
 }
 
