--- a/les23/task2/styles/breakpoints.scss
+++ b/les23/task2/styles/breakpoints.scss
@@ -3,19 +3,31 @@ $md: 900px;
 $lg: 1200px;
 
 @mixin for-extra-small {
-    @media screen and (max-width: $sm-1){
+    @media screen and (max-width: $sm - 1){
+        @content;
+    }
+}
+
+@mixin for-small-up {
+    @media screen and (max-width: $md - 1){
         @content;
     }
 }
 
 @mixin for-medium-up {
-    @media screen and (min-width: $sm){
+    @media screen and (max-width: $lg - 1){
         @content;
     }
 }
 
 @mixin for-large-up {
     @media screen and (min-width: $lg){
+        @content;
+    }
+}
+
+@mixin orient {
+    @media screen and (orientation: landscape) {
         @content;
     }
 }
