--- a/les23/task2/styles/index.scss
+++ b/les23/task2/styles/index.scss
@@ -14,14 +14,22 @@ body {
 .square {
     width: 100px;
     height: 100px;
+    margin: 16px;
     background-color: #ff7f50;
-    margin: 8px;
 
-    @include for-medium-up {
+    @include for-small-up {
         background-color: #8a2be2;
     }
-
+    @include for-medium-up {
+        background-color: #a61;
+    }
     @include for-large-up {
         background-color: #c47;
+    }
+}
+
+.container {
+    @include orient {
+        display: flex;
     }
 }
