--- a/les23/task2/styles/breakpoints.scss
+++ b/les23/task2/styles/breakpoints.scss
@@ -1,31 +1,24 @@
-$sm: 600px;
-$md: 900px;
-$lg: 1200px;
+$small: 600px;
+$medium: 900px;
+$large: 1200px;
 
-@mixin for-extra-small {
-    @media screen and (max-width: $sm - 1){
-        @content;
+@mixin for-small {
+    @media (min-width: $small) and (max-width: $medium - 1) {
+       @content; 
     }
 }
 
-@mixin for-small-up {
-    @media screen and (max-width: $md - 1){
-        @content;
+@mixin for-medium {
+    @media (min-width: $medium) and (max-width: $large - 1) {
+       @content; 
     }
 }
 
-@mixin for-medium-up {
-    @media screen and (max-width: $lg - 1){
-        @content;
+@mixin for-large {
+    @media screen and (min-width: $large) {
+       @content; 
     }
 }
-
-@mixin for-large-up {
-    @media screen and (min-width: $lg){
-        @content;
-    }
-}
-
 @mixin orient {
     @media screen and (orientation: landscape) {
         @content;
