--- a/les23/task2/styles/index.scss
+++ b/les23/task2/styles/index.scss
@@ -6,24 +6,24 @@
 
 body {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
 .square {
     width: 100px;
     height: 100px;
-    margin: 16px;
+    margin: 16px 8px;
     background-color: #ff7f50;
-
-    @include for-small-up {
+    
+    @include for-small {
         background-color: #8a2be2;
     }
-    @include for-medium-up {
+    @include for-medium {
         background-color: #a61;
     }
-    @include for-large-up {
+    @include for-large {
         background-color: #c47;
     }
 }
